# midi-drummer

./: ._MIDI_samples_drums_only_AC_DC_-_Highway_to_hell.mid  .gitignore  README.md  camera_calibration.py  test_move
src/arduino/servo_control/: servo_control.ino
src/drummer/: CMakeLists.txt  package.xml  requirements.txt
src/drummer/MIDI/samples/: drums_only_VampireKillerCV1.mid
src/drummer/launch/: drummer.launch
src/drummer/scripts/: camera_test.py  midi_translation  nav_msg.py  pose_estimation
src/servo_handler/: CMakeLists.txt  package.xml
src/servo_handler/scripts/: servo_handler.py  servo_handler_changed.py
